Update Soggetto.java